cluster/apps/networking/traefik/external/unraid/owrt/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: owrt
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.49
    ports:
      - name: default
        port: 8080
        protocol: TCP
