cluster/apps/networking/traefik/external/unraid/owrt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owrt
  namespace: external
spec:
  ports:
    - name: default
      port: 8080
      protocol: TCP
      targetPort: 8080
  clusterIP: None
  type: ClusterIP
